=========================================================================
Date                Version     Description
=========================================================================

2021-06-15: v2.4.2 : Fix cron query method not firing as expected on some configurations.
                     Fix 'Fetch' query method not updating order status from backend.
                     Remove redirect button.
                     Code refactor and format.
                     Improve IPN reliability.

2021-05-14: v2.4.1 : Fix PayVault Card Delete.
                     Transaction ID added for Pending orders after initiate.
                     Cron schedule amended.
                     Payment Types radio block fix for some themes.
                     Remove object manager.
                     Fix undefined index error $orderData['additional_information'].
                     Order status to pending if checksum fails to pick up by cron.
                     Don't update order status by IPN if already complete or processing.

2021-04-06: v2.4.0 : Major rewrite to add support for Magento 2.4.x
                     Improve handling of spaces in PayGate ID.
                     Remove legacy iFrame code.
                     Add PayWeb Query function.
                     Add PayVault feature.
                     Add Payment Types feature.
                     Use Magento Payment Transactions instead of order comments.
2020-09-23: v2.3.4 : Fix order page redirect if successful transaction on some servers.
2020-09-16: v2.3.3 : Fix sessions cleared in some browsers.
2020-01-24: v2.3.2 : Improve testing validation for existing invoices.
                     Tested with Magento 2.3.3.
2019-12-14: v2.3.1 : Added CSRF handling in notify script.
                     Version check for CSRF - 2.3.0+ only.
                     Use Grand Total only in PayGate.
                     Added changelog.
2019-12-14: v2.3.0 : Better compatibility with Magento 2.2.x.