@@ -2,6 +2,8 @@
 Date                Version     Description
 =========================================================================
 
+2021-07-05: v2.4.3 : Increase cron schedule to query every 10 minutes.
+
 2021-06-15: v2.4.2 : Fix cron query method not firing as expected on some configurations.
                      Fix 'Fetch' query method not updating order status from backend.
                      Remove redirect button.
